# palza-mcp-and-tools

./: .coverage  .env.example  .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  pytest.ini  run_tests.py  temp_trigger.md  tox.ini
.github/workflows/: pylint.yml  test.yml  tox.yml
docs/: git-workflow.md
reports/: report.html
scripts/: test_report.py
src/mcp_servers/: __init__.py
src/mcp_servers/shopify/: README.md  __init__.py  main.py  pyproject.toml
src/mcp_servers/shopify/data/: products.csv
src/mcp_servers/shopify/external_apis/: __init__.py  config.py  inventory_api.py  recommendation_api.py
src/mcp_servers/shopify/repository/: shopify_crawler.py
src/mcp_servers/shopify/repository/cache/: https___www_jackery_com_products_jackery_solar_generator_2000_v2.json
src/mcp_servers/shopify/src/products_repository/: __init__.py  shopify_products.py  simple.py
src/mcp_servers/shopify/src/products_repository/cache/: https___www_jackery_com_products_jackery_2_year_extended_warranty_fee_smart_transfer_switch.json  https___www_jackery_com_products_jackery_explorer_5000_plus.json  https___www_jackery_com_products_jackery_solar_generator_2000_v2_100_mini.json
src/mcp_servers/shopify/src/test/: mcp_test.py  test.py  test_shopify_products.py
src/mcp_servers/shopify/utils/: __init__.py  config.py  helpers.py
src/mcp_servers/shopping/: README.md  __init__.py  crawler.py  example.py  main.py  mcp_server.py  service.py  shopping_products.py
src/mcp_servers/shopping/handlers/: __init__.py  product_handler.py
src/mcp_servers/weather/: __init__.py  main.py  pyproject.toml  weather.py
tests/: test_shopify.py  test_weather.py
tests/shopify/: __init__.py  test_external_apis.py  test_external_apis_config.py
tests/shopping/: conftest.py  test_crawler.py  test_service.py
