[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-servers"
version = "0.1.0"
description = "Collection of MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "mcp>=1.9.3",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "requests>=2.31.0",
]
authors = [
    {name = "Xiaowei Ye", email = "yexw@amazon.com"}
]

[project.scripts]
mcp-shopify-products = "mcp_servers.shopify.main:main"
mcp-weather = "mcp_servers.weather.main:main"


