[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-servers"
version = "0.1.0"
description = "Collection of MCP servers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Xiaowei Ye", email = "yexw@amazon.com"}
]
dependencies = [
    "bs4>=0.0.2",
    "mcp>=1.9.3",
    "pandas>=2.3.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.0.0",
    "allure-pytest>=2.13.0",
    "tox>=4.0.0",
]

[project.scripts]
mcp-shopify-products = "mcp_servers.shopify.main:main"
mcp-weather = "mcp_servers.weather.main:main"
mcp-shopping = "mcp_servers.shopping.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--html=reports/report.html",
    "--self-contained-html"
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312
isolated_build = true

[testenv]
extras = test
commands = pytest

[testenv:coverage]
extras = test
commands = 
    pytest --cov=src --cov-report=html --cov-report=term-missing
    coverage report --fail-under=80
"""

