[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[project]
name = "mcp-shopify-products"
version = "0.2.1"
description = "Shopify Products information MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "mcp>=1.9.3",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "requests>=2.31.0",
]
authors = [
  {name = "Xiaowei Ye", email = "yexw@amazon.com"}
]
maintainers = [
  {name = "Xiaowei Ye", email = "yexw@amazon.com"}
]

license = "GPL-3.0-or-later"

[tool.setuptools]
package-dir = {"" = "src"}  # 指定源代码目录为 src
packages = ["products_repository","product_test"]

[project.scripts]
mcp-shopify-products = "products_repository:joke"

